# tvastr

./: .gitignore  CLAUDE.md  LICENSE  README.md  TVASTR_PLAN.md  plan.md  pyproject.toml
examples/python-lib-feature/: objective.md
examples/python-lib-feature/mathforge-repo/.tvastr/: repo.yaml
examples/python-lib-feature/mathforge-repo/mathforge/: __init__.py  vector.py
examples/python-lib-feature/mathforge-repo/tests/: test_matrix.py  test_vector.py
tests/: test_db.py  test_decomposer.py  test_events.py  test_merger.py  test_orchestrator.py  test_scheduler.py  test_server.py  test_ws.py
tvastr/: cli.py
tvastr/agent/: forge_agent.py  tools.py
tvastr/infra/: validator.py
tvastr/master/: decomposer.py  merger.py  orchestrator.py  scheduler.py
tvastr/prompts/: agent_system.md  master_system.md
tvastr/server/: app.py  events.py  schema.py  ws.py
tvastr/server/routes/: agents.py  controls.py  objectives.py  runs.py
tvastr/state/: db.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts  mutations.ts  queries.ts  types.ts
ui/src/api/__tests__/: client.test.ts
ui/src/components/: AgentStream.tsx  Controls.tsx  Dashboard.tsx  Journal.tsx  Layout.tsx  PatchViewer.tsx  RunView.tsx  TestResults.tsx  Timeline.tsx
ui/src/components/__tests__/: Controls.test.tsx  Dashboard.test.tsx  Journal.test.tsx  PatchViewer.test.tsx  RunView.test.tsx  TestResults.test.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/hooks/__tests__/: useWebSocket.test.ts
