[project]
name = "tvastr"
version = "0.1.0"
description = "Autonomous craftsman that forges, deploys, and validates code changes against live infrastructure"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tvastr = "tvastr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
